# hermit-bluetooth

./: LICENSE  Makefile  README.md  Setup.hs  hermit-bluetooth.cabal
driver/: Main.hs
include/: bluez_utils.c  bluez_utils.h
lib/wsa_utils/: .gitignore  wsa_utils.sln
lib/wsa_utils/wsa_utils/: wsa_session.h  wsa_utils.cpp  wsa_utils.def  wsa_utils.h  wsa_utils.vcxproj  wsa_utils.vcxproj.filters
src/HERMIT/: Bluetooth.hs
src/HERMIT/Bluetooth/: Adapter.hsc  Info.hsc  Linux.hsc  Types.hsc  Win32.hsc  bdaddr.c  bdaddr.h  bluez_utils.c  sdp_register_service.c  sdp_register_service.h
