name:                hermit-bluetooth

-- The package version. See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0
synopsis:            Provides a Bluetooth interface between HERMIT and Armatus
homepage:            http://www.ittc.ku.edu/csdl/fpg
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
-- copyright:           
category:            Network
build-type:          Simple
extra-source-files:  examples/discover.hs
cabal-version:       >=1.14

library
  exposed-modules:      HERMIT.Bluetooth.Adapter
  other-modules:        HERMIT.Bluetooth.Types
  hs-source-dirs:       src
  build-depends:        base >= 4 && < 5,
                        bytestring,
                        ghc >= 7.6,
                        network
  if os(windows)
    build-depends:      Win32
  default-language:     Haskell2010
  if os(windows)
    extra-libraries:    ws2_32
  else
    extra-libraries:    bluetooth
  include-dirs:         src/HERMIT/Bluetooth/
                        /usr/include/glib-2.0/
                        /usr/lib/glib-2.0/include
  c-sources:            src/HERMIT/Bluetooth/bluez_utils.c
  ghc-options:          -Wall
  
executable hermit-bluetooth
  main-is:              Main.hs
  hs-source-dirs:       driver
  default-language:     Haskell2010
  build-depends:        base >= 4 && < 5,
                        hermit,
                        hermit-bluetooth,
                        network,
                        deepseq
  ghc-options:          -Wall
                        -optc-std=c99
                        -threaded